# cb2bc

./: .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
cb2bc/: api.py  cli.py  config.py  converter.py  mappings.py
specs/: api-client.md  authentication.md  cli.md  configuration.md  converter.md  index.md
tests/: test_advanced_trade.py  test_api.py  test_beancount_validity.py  test_cli.py  test_config.py  test_conversion_removal.py  test_converter.py  test_date_filtering.py  test_fixtures.py  test_mappings.py  test_merged.py
tests/fixtures/: accounts_response.json  test_ec_key.pem  transactions_response.json
