[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinbase-beancount"
version = "0.1.0"
description = "Fetch Coinbase transactions and convert to beancount format"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "python-dateutil>=2.8",
    "PyJWT>=2.8",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "beancount>=3.2.0",
    "ruff",
]

[project.scripts]
cb2bc = "cb2bc.cli:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["cb2bc"]
